update: add models to sum up to 400

--- a/src/0-debug_excelsheets.ipynb
+++ b/src/0-debug_excelsheets.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -286,32 +286,17 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>130</th>\n",
-       "      <td>131</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     id_x citation watershed_name name country  lat  lon  area_km2  id_y  \\\n",
-       "130   131      NaN            NaN  NaN     NaN  NaN  NaN       NaN   NaN   \n",
-       "\n",
-       "     huc_watershed_id  \n",
-       "130               NaN  "
+       "Empty DataFrame\n",
+       "Columns: [id_x, citation, watershed_name, name, country, lat, lon, area_km2, id_y, huc_watershed_id]\n",
+       "Index: []"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -343,11 +328,10 @@
       "text/plain": [
        "array(['N', 'Cropland described', 'Vegetation described',\n",
        "       'Forest described', 'Seasonal change discussed',\n",
-       "       'Vegetation icons', 'Vegetation types described', nan],\n",
-       "      dtype=object)"
+       "       'Vegetation icons', 'Vegetation types described'], dtype=object)"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,19 +342,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['N', 'Soil described', 'Soil types described',\n",
-       "       'Soil texture described', 'Soil hydraulic properties described',\n",
-       "       'Multiple properties described', 'Horizons described'],\n",
-       "      dtype=object)"
+       "array(['N', 'Horizons described', 'Soil types described'], dtype=object)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,17 +362,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['N', 'Geology described', 'Glacier described', 'Karst described',\n",
-       "       'Bedrock described'], dtype=object)"
+       "array(['N', 'Geology described', 'Glacier described', 'Bedrock described'],\n",
+       "      dtype=object)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,16 +383,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['N', 'Slopes described', 'Topography described'], dtype=object)"
+       "array(['Slopes described', 'N', 'Topography described', 'Scale bar shown'],\n",
+       "      dtype=object)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,18 +404,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['N', 'Multiple interpretations demonstrated',\n",
-       "       'Limitations discussed', 'Uncertainty described',\n",
-       "       'Unknown items identified'], dtype=object)"
+       "array(['N', 'Unknown items identified', 'Uncertainty described'],\n",
+       "      dtype=object)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,17 +425,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['N', 'Impact of root activity described', 'salinity study'],\n",
-       "      dtype=object)"
+       "array(['Soil properties (surface sealing, cracking)',\n",
+       "       'This is a longitudinal profile, average transit time given, scale given',\n",
+       "       'Riparian area only',\n",
+       "       'Show cross-section of water table slopes/depths for wet and dry seasons',\n",
+       "       'Reaction fronts shown', nan,\n",
+       "       'Joints/faults show, approximate scale given in caption',\n",
+       "       'Soil clay content in caption, % streamflow contribution in legend, open boundary noted, extra notes shown on figures',\n",
+       "       'The sources (=stores) and flow paths are shown as separate pictures. The diffuse groundwater flows are shown as being from shallow and deep aquifers, but are described as being \"flows through the soil matrix and macropores\"',\n",
+       "       'Inconsistencies betweeen picture and legend, wiggly arrows meaning unknown, many unlabelled arrows',\n",
+       "       'Arrows show water table rise/fall; indicates which storages have variable storage',\n",
+       "       'Describes water sources as event water, shallow gw, deep gw',\n",
+       "       'Focused on karst systems',\n",
+       "       'Complex flow paths and changes in saturated zone shape/layers shown in diagrams, ',\n",
+       "       'Just shown as soil sections',\n",
+       "       'Focused on isotope enrichment processes',\n",
+       "       'Arrows show direction of groundwater e.g. towards zones of higher conductivity',\n",
+       "       'Pictures of suface rocks shown, unsure of significance',\n",
+       "       'Also shows translation into model structure',\n",
+       "       'Shows vertical scale, shows isolines of chloride for salinity',\n",
+       "       'Bedrock bedding planes shown',\n",
+       "       'Shows locations of new and old water',\n",
+       "       'Soil property (organic/mineral)',\n",
+       "       '?Should precipitation, evaporation count as fluxes?',\n",
+       "       'Lots of information in text but very hard to match to unlabelled arrows in diagram',\n",
+       "       'Shading used to show saturation level of soil, location of infiltration/recharge under depression shown by location of arrows',\n",
+       "       'Shows different rainfall rates over time',\n",
+       "       'Water ages were shown from 3 weeks - 6 months',\n",
+       "       'Mostly focused on nitrates',\n",
+       "       'Depth of surface layer marked on hillslope and close to channel',\n",
+       "       'Also shows fluxes of DOC, TDS, and inorganic nitrogen',\n",
+       "       'Soil property (free-draining)',\n",
+       "       'Shows lateral and vertical scale, shows zones of different N-4 in soil',\n",
+       "       'Shows scale in vertical and horizontal, figure shows longitudinal profile',\n",
+       "       'Runoff components grouped as near surface runoff, shallow groundwater, deep groundwater',\n",
+       "       'Unusual - plan view where location of different dominant processes is mapped, scale shown',\n",
+       "       'Areas of slopes/wetlands given',\n",
+       "       'All stores are shown separately where they are dry or filled with water',\n",
+       "       'Caption describes the measurement types used to infer each process',\n",
+       "       'Shows speed of process by arrow length, shows which process knowledge gained by which catchment investigation/data type',\n",
+       "       'Also groups water bodies by their stable isotope composition',\n",
+       "       'Flux property: temporary/permanent; cross-sectional slope of water table shown; vegetation leaf on/off shown; flows shown as mediated by storage or soil structure',\n",
+       "       'Shows event/pre-event water fractions',\n",
+       "       'Shows bedrock fractures, shows thickness of sediment',\n",
+       "       'Bedding planes and fractures shown', 'N',\n",
+       "       'Size of arrows determines the importance of flowpaths',\n",
+       "       'Saturated hydraulic conductivity estimates shown',\n",
+       "       'Arrow width represents flow path importance', 'Sediment transfer',\n",
+       "       'Scale bar', 'Scale bar ', 'Salinity study'], dtype=object)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,20 +492,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['Hillslope position', 'N', 'Land use / Land cover',\n",
-       "       'Soil or Geology', 'Catchment spatial scale', 'Process',\n",
-       "       'Hillslope position/Catchment spatial scale', 'Topography',\n",
-       "       'Multiple catchments', 'Tributary',\n",
-       "       'Land cover / Hillslope position'], dtype=object)"
+       "array(['N', 'Hillslope position', 'Catchment spatial scale', 'Topography',\n",
+       "       'Aspects', 'Soil or Geology', 'Process', 'Land use / Land cover'],\n",
+       "      dtype=object)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,20 +514,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['N', 'Wetness and event', 'Season', 'Event', 'Season and event',\n",
-       "       'Rainfall intensity', 'Season and rainfall intensity', 'Wetness',\n",
-       "       'Season with snow', 'Interannual', 'Event and rainfall intensity',\n",
-       "       'Season and rainfall intensity with snow', 'Season and wetness',\n",
-       "       nan], dtype=object)"
+       "array(['Season', 'N', 'Rainfall intensity', 'Season with snow', 'Wetness',\n",
+       "       'Event', 'Season and wetness', 'Interannual'], dtype=object)"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,6 +532,13 @@
    "source": [
     "df_model['temporal_property'].unique()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
